<resources>
    <string name="app_name">ITSawade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CommentsTitle">Comments</string>
    <string name="keyText">Oath Access Token</string>
    <string name="buttonkey">Speichern</string>
    <string name="loginUserText">Username</string>
    <string name="login">Noch Keine Login Daten vorhanden!</string>
    <string name="optionen">Optionen</string>
    <string name="botomKonto">Konto</string>
    <string name="next">Weiter</string>
    <string name="photogallery_txt">Foto wählen</string>
    <string name="pls_wait_txt">Bitte Warten</string>
    <string name="addBlogPostText">Dein Text hier</string>
    <string name="addBlogPostTitle">Titel</string>
    <string name="BildWaehlen">Titelbild wählen</string>
    <string name="clientSecretText">Client Secret</string>
    <string name="ClientId">Client Id</string>
    <string name="AddBilder">Bilder</string>
    <string name="deleteBild">Löschen</string>
    <string name="addBilderListe">Hinzufügen</string>
</resources>
