<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.itsawade.itsawade.ui.activitys.AddNewBlogPostActivity">


    <EditText
        android:hint="@string/addBlogPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:id="@+id/editNewBlogPostTitleText"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BildWaehlen"
        android:id="@+id/textView2"
        android:textSize="18dp"
        android:layout_below="@+id/editNewBlogPostTitleText"
        android:layout_alignLeft="@+id/editNewBlogPostTitleText"
        android:layout_alignStart="@+id/editNewBlogPostTitleText" />


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageButton"
        android:onClick="imageWaehlen"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddBilder"
        android:onClick="bilder"
        android:id="@+id/addBilderButton"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view2"
        android:layout_below="@+id/addBilderButton"
        android:layout_alignBottom="@+id/addBilderButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:hint="@string/addBlogPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNewBlogPost"

        android:layout_below="@+id/view2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
